--- a/app/views/admin/products/new.html.erb
+++ b/app/views/admin/products/new.html.erb
@@ -45,7 +45,7 @@
         <p>
           <%= f.label :available_on, t("available_on") %><br />
           <%= f.error_message_on :available_on %>
-          <%= f.unobtrusive_date_text_picker :product, :available_on, :style=>"width:150px" %>
+          <%= f.unobtrusive_date_text_picker :available_on, :style=>"width:150px" %>
         </p>
 
 
@@ -56,3 +56,4 @@
 
   </fieldset>
 <% end %>
+<%= javascript_tag "datePickerController.create();" %>
