--- a/app/views/admin/variants/_form.html.erb
+++ b/app/views/admin/variants/_form.html.erb
@@ -11,7 +11,11 @@
         %>
         <% else %>
           <% ov = @variant.option_values.detect {|o| o.option_type == option.option_type } %>
-          <% opt = ov.presentation + "(#{ov.amount.sign_symbol} #{ov.amount.abs})" %>
+          <% if ov.amount %>
+            <% opt = ov.presentation + "(#{ov.amount.sign_symbol} #{ov.amount.abs})" %>
+          <%else%>
+            <% opt = ov.presentation%>
+          <% end-%>
           <%= text_field(:new_variant,  option.option_type.presentation, :value => opt, :disabled => 'disabled') %>
         <% end %>
       </p>
